# mtproto

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: test.yml
mtproto/: buffer.py  connection.py  enums.py
mtproto/crypto/: aes.py
mtproto/packets/: __init__.py  error_packet.py  message_packet.py  quick_ack_packet.py
mtproto/session/: messages.py  msg_id.py  session.py
mtproto/session/containers/: msg_container.py  msgs_ack.py
mtproto/session/service_messages/: msg_container.py
mtproto/transport/: __init__.py  buffer.py  connection.py
mtproto/transport/packets/: error_packet.py  message_packet.py  quick_ack_packet.py
mtproto/transport/transports/: __init__.py  abridged.py  base_transport.py  full.py  http.py  intermediate.py  obfuscated.py  padded_intermediate.py  ws.py
mtproto/transports/: abridged.py  base_transport.py  full.py  intermediate.py  obfuscated.py  padded_intermediate.py
mtproto/utils/: auto_repr.py
tests/: test_encrypted_packets.py  test_socket.py  test_transports.py
