[project]
name = "mtproto"
version = "0.3.0b1"
description = "Telegram MTProto protocol implementation"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "RuslanUC", email = "dev_ruslan_uc@protonmail.com" },
]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Internet",
    "Topic :: Utilities",
]

[project.urls]
homepage = "https://github.com/RuslanUC/mtproto"
repository = "https://github.com/RuslanUC/mtproto"

[project.optional-dependencies]
tgcrypto = [
    "tgcrypto (>=1.2.5,<2.0)",
]
pyaes = [
    "pyaes (>=1.6.1,<2.0)",
]
http = [
    "h11 (>=0.16.0,<1.0)",
]
ws = [
    "h11 (>=0.16.0,<1.0)",
    "wsproto (>=1.3.2,<2.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
data_file = "coverage.coverage"
